--- a/public/style.css
+++ b/public/style.css
@@ -48,3 +48,11 @@
   width: 10%;
   height: 5rem;
 }
+
+.clear-button {
+  width: 10%;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 2rem;
+}
