--- a/public/style.css
+++ b/public/style.css
@@ -1,3 +1,5 @@
+/* Chatroom */
+
 * {
   box-sizing: border-box;
 }
@@ -56,4 +58,45 @@
   margin-left: auto;
   margin-right: auto;
   margin-top: 2rem;
+}
+
+/* Landing page */
+
+.info {
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10rem;
+  box-shadow: 0 0 10px;
+  background-color: lightgray;
+  height: 20rem;
+}
+
+.title {
+  text-align: center;
+}
+
+.name {
+  text-align: center;
+  padding-top: 10%;
+}
+
+.input-name {
+  font-size: 1.25rem;
+}
+
+.label-name {
+  font-size: 1.25rem;
+}
+
+.enter {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 15%;
+  height: 3rem;
+}
+
+.message-name {
+  font-weight: bold;
 }
